--- a/CoinFlow/Chart/Chart.storyboard
+++ b/CoinFlow/Chart/Chart.storyboard
@@ -18,7 +18,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nJg-fP-ePu">
-                                <rect key="frame" x="0.0" y="88" width="390" height="722"/>
+                                <rect key="frame" x="0.0" y="140" width="390" height="670"/>
                                 <subviews>
                                     <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="LMo-pv-fXq">
                                         <rect key="frame" x="0.0" y="0.0" width="390" height="200"/>
@@ -205,22 +205,134 @@
                         <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Detail" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="W3r-ai-bQe">
-                                <rect key="frame" x="186" y="419" width="44" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jd8-gS-nZz">
+                                <rect key="frame" x="0.0" y="232" width="390" height="250"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="BTC" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nzq-eB-sM1">
+                                        <rect key="frame" x="160.33333333333334" y="49" width="69.333333333333343" height="48"/>
+                                        <fontDescription key="fontDescription" type="system" weight="thin" pointSize="40"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="100,000" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="R6y-Yj-Mqj">
+                                        <rect key="frame" x="142" y="112" width="106.33333333333331" height="36"/>
+                                        <fontDescription key="fontDescription" type="system" weight="thin" pointSize="30"/>
+                                        <color key="textColor" systemColor="systemBlueColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="USD" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PAt-sw-mUg">
+                                        <rect key="frame" x="216.66666666666666" y="158" width="31.666666666666657" height="19.333333333333343"/>
+                                        <fontDescription key="fontDescription" type="system" weight="thin" pointSize="16"/>
+                                        <color key="textColor" systemColor="systemGrayColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstItem="R6y-Yj-Mqj" firstAttribute="centerX" secondItem="nzq-eB-sM1" secondAttribute="centerX" id="Cyf-SH-ZcV"/>
+                                    <constraint firstItem="PAt-sw-mUg" firstAttribute="trailing" secondItem="R6y-Yj-Mqj" secondAttribute="trailing" id="E5y-VQ-Yt5"/>
+                                    <constraint firstAttribute="height" constant="250" id="M1H-aQ-1s4"/>
+                                    <constraint firstItem="PAt-sw-mUg" firstAttribute="top" secondItem="R6y-Yj-Mqj" secondAttribute="bottom" constant="10" id="TVV-zX-G8c"/>
+                                    <constraint firstItem="nzq-eB-sM1" firstAttribute="centerX" secondItem="jd8-gS-nZz" secondAttribute="centerX" id="ZK8-PA-AhA"/>
+                                    <constraint firstItem="R6y-Yj-Mqj" firstAttribute="top" secondItem="nzq-eB-sM1" secondAttribute="bottom" constant="15" id="qdG-Mj-Y9U"/>
+                                    <constraint firstItem="nzq-eB-sM1" firstAttribute="top" secondItem="jd8-gS-nZz" secondAttribute="top" constant="49" id="sRu-5c-Cdz"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Kj8-l3-akp">
+                                <rect key="frame" x="0.0" y="506" width="390" height="200"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="200" id="8m7-cY-b3c"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="A8J-ro-err">
+                                <rect key="frame" x="40" y="730" width="310" height="60"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="2gj-mx-nRU">
+                                        <rect key="frame" x="0.0" y="10" width="310" height="40"/>
+                                        <subviews>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="M5C-rF-aUp">
+                                                <rect key="frame" x="0.0" y="0.0" width="77.666666666666671" height="40"/>
+                                                <fontDescription key="fontDescription" type="system" weight="thin" pointSize="18"/>
+                                                <state key="normal" title="1D"/>
+                                                <connections>
+                                                    <action selector="dailyButtonTapped:" destination="nub-JL-kAn" eventType="touchUpInside" id="Qu4-cw-bXq"/>
+                                                </connections>
+                                            </button>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Z5J-zK-dT7">
+                                                <rect key="frame" x="77.666666666666686" y="0.0" width="77.333333333333314" height="40"/>
+                                                <fontDescription key="fontDescription" type="system" weight="thin" pointSize="18"/>
+                                                <state key="normal" title="1W"/>
+                                                <connections>
+                                                    <action selector="weeklyButtonTapped:" destination="nub-JL-kAn" eventType="touchUpInside" id="gYK-bl-LnQ"/>
+                                                </connections>
+                                            </button>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zbE-Bz-Onw">
+                                                <rect key="frame" x="155" y="0.0" width="77.666666666666686" height="40"/>
+                                                <fontDescription key="fontDescription" type="system" weight="thin" pointSize="18"/>
+                                                <state key="normal" title="1M"/>
+                                                <connections>
+                                                    <action selector="monthlyButtonTapped:" destination="nub-JL-kAn" eventType="touchUpInside" id="LOM-mD-JCf"/>
+                                                </connections>
+                                            </button>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Gzt-GM-LRE">
+                                                <rect key="frame" x="232.66666666666671" y="0.0" width="77.333333333333343" height="40"/>
+                                                <fontDescription key="fontDescription" type="system" weight="thin" pointSize="18"/>
+                                                <state key="normal" title="1Y"/>
+                                                <connections>
+                                                    <action selector="yealyButtonTapped:" destination="nub-JL-kAn" eventType="touchUpInside" id="KN8-PL-mrE"/>
+                                                </connections>
+                                            </button>
+                                        </subviews>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="40" id="bQu-kH-MwH"/>
+                                        </constraints>
+                                    </stackView>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="GMF-Cq-gmu">
+                                        <rect key="frame" x="0.0" y="56" width="77.666666666666671" height="4"/>
+                                        <color key="backgroundColor" systemColor="systemBlueColor"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="4" id="66I-Qb-yT0"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="2gj-mx-nRU" secondAttribute="trailing" id="FJo-As-RwG"/>
+                                    <constraint firstItem="2gj-mx-nRU" firstAttribute="centerY" secondItem="A8J-ro-err" secondAttribute="centerY" id="NmX-fW-gz3"/>
+                                    <constraint firstItem="2gj-mx-nRU" firstAttribute="leading" secondItem="A8J-ro-err" secondAttribute="leading" id="OOn-Cn-pQh"/>
+                                    <constraint firstAttribute="height" constant="60" id="QN9-3s-UQ7"/>
+                                    <constraint firstAttribute="bottom" secondItem="GMF-Cq-gmu" secondAttribute="bottom" id="hre-2G-C2v"/>
+                                    <constraint firstItem="GMF-Cq-gmu" firstAttribute="leading" secondItem="A8J-ro-err" secondAttribute="leading" id="rgx-AF-LUL"/>
+                                    <constraint firstItem="GMF-Cq-gmu" firstAttribute="width" secondItem="2gj-mx-nRU" secondAttribute="width" multiplier="0.25" id="xht-f2-vv9"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="WgB-5R-ZQ6"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="Kj8-l3-akp" firstAttribute="top" secondItem="jd8-gS-nZz" secondAttribute="bottom" constant="24" id="1aq-2i-CSi"/>
+                            <constraint firstItem="A8J-ro-err" firstAttribute="top" secondItem="Kj8-l3-akp" secondAttribute="bottom" constant="24" id="3fx-FS-si0"/>
+                            <constraint firstItem="WgB-5R-ZQ6" firstAttribute="bottom" secondItem="A8J-ro-err" secondAttribute="bottom" constant="20" id="Ojb-Fg-4i1"/>
+                            <constraint firstItem="A8J-ro-err" firstAttribute="centerX" secondItem="WgB-5R-ZQ6" secondAttribute="centerX" id="QOG-D1-b1i"/>
+                            <constraint firstItem="WgB-5R-ZQ6" firstAttribute="trailing" secondItem="jd8-gS-nZz" secondAttribute="trailing" id="VzE-ca-i55"/>
+                            <constraint firstItem="jd8-gS-nZz" firstAttribute="leading" secondItem="WgB-5R-ZQ6" secondAttribute="leading" id="ZNz-lG-irR"/>
+                            <constraint firstItem="WgB-5R-ZQ6" firstAttribute="trailing" secondItem="Kj8-l3-akp" secondAttribute="trailing" id="aep-Sh-IM8"/>
+                            <constraint firstItem="A8J-ro-err" firstAttribute="leading" secondItem="WgB-5R-ZQ6" secondAttribute="leading" constant="40" id="gvc-0U-FjQ"/>
+                            <constraint firstItem="Kj8-l3-akp" firstAttribute="leading" secondItem="WgB-5R-ZQ6" secondAttribute="leading" id="woK-Dw-Vob"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="AQN-Oi-mvS"/>
+                    <connections>
+                        <outlet property="coinPriceLabel" destination="R6y-Yj-Mqj" id="sKF-Um-wa0"/>
+                        <outlet property="coinTypeLabel" destination="nzq-eB-sM1" id="Mec-dj-Xuy"/>
+                        <outlet property="highlightBar" destination="GMF-Cq-gmu" id="DeM-jC-ev7"/>
+                        <outlet property="highlightBarLeading" destination="rgx-AF-LUL" id="ccx-k3-GkZ"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="oZy-dh-AD5" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-2369" y="1376"/>
+            <point key="canvasLocation" x="-2369.2307692307691" y="1375.5924170616113"/>
         </scene>
         <!--Chart-->
         <scene sceneID="jSA-8b-oiQ">
@@ -254,8 +366,14 @@
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
+        <systemColor name="systemBlueColor">
+            <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
         <systemColor name="systemGray4Color">
             <color red="0.81960784313725488" green="0.81960784313725488" blue="0.83921568627450982" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemGrayColor">
+            <color red="0.55686274509803924" green="0.55686274509803924" blue="0.57647058823529407" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemPinkColor">
             <color red="1" green="0.17647058823529413" blue="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
